--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="fall">Fall</string>
     <string name="winter">Winter</string>
     <string name="course_term">Course Term</string>
+    <string name="Courses">Courses</string>
 </resources>
