Made changes to the CourseSchedule java and xml file to display the courses. Made changes to ScheduleActivity xml file to communicate with CourseActivity.java to display the course name on ScheduleActivity xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="winter">Winter</string>
     <string name="course_term">Course Term</string>
     <string name="Courses">Courses</string>
+    <string name="add">add</string>
 </resources>
