--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CourseScheduler</string>
-    <string name="schedule">New Schedule</string>
+    <string name="studentCourse">New Schedule</string>
     <string name="previous">Previous</string>
     <string name="course_name">Course Name</string>
     <string name="click_to_go_to_previous_window">Click to go to Previous Window</string>
