Update student functionality works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="registerStudent">Register Student</string>
     <string name="backToLogin">Back To Login</string>
     <string name="logout">Logout</string>
+    <string name="edit">Edit</string>
     <string name="addCourse">Add Course</string>
     <string name="register">Register</string>
     <string name="deleteStudent">Delete Student</string>
