--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="course_term">Course Term</string>
     <string name="Courses">Courses</string>
     <string name="add">add</string>
+    <string name="invalid_name">Please Enter Name Containing Characters a-z. Can Be Capital Or Small Letters</string>
+    <string name="invalid_id">Please Enter An ID Containing Positive Numbers Only. Please Note ID Has To Be Of Length 7</string>
 </resources>
