--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">CourseScheduler</string>
-    <string name="openSchedule">Open Schedule Page</string>
+    <string name="newSchedule">New Schedule</string>
     <string name="addSchedule">Add Schedule</string>
-    <string name="deleteSchedule">Delete Schedule</string>
     <string name="updateStudent">Update Student</string>
     <string name="registerStudent">Register Student</string>
     <string name="backToLogin">Back To Login</string>
@@ -10,7 +9,6 @@
     <string name="back">Back</string>
     <string name="edit">Edit</string>
     <string name="addCourse">Add Course</string>
-    <string name="deleteCourse">Delete Course</string>
     <string name="register">Register</string>
     <string name="deleteStudent">Delete Student</string>
     <string name="previous">Previous</string>
@@ -24,9 +22,4 @@
     <string name="course_term">Course Term</string>
     <string name="Courses">Courses</string>
     <string name="add">add</string>
-    <string name="invalid_name">Please Enter Name Containing Characters a-z. Can Be Capital Or Small Letters</string>
-    <string name="invalid_id">Please Enter An ID Containing Positive Numbers Only. Please Note ID Has To Be Of Length 7</string>
-    <string name="invalid_name_login">Please Enter First Name Only. Name Has To Be Characters a-z only And Can Be Capital Or Small Letters</string>
-    <string name="invalid_id_login">Please Enter Positive Numbers Only. ID Has To Be Of Length 7.</string>
-    <string name="invalid_username_missing">Please Enter Your User Name</string>
 </resources>
